--- a/srcs/requirements/nginx/conf/nginx.conf
+++ b/srcs/requirements/nginx/conf/nginx.conf
@@ -1,31 +1,16 @@
-# server {
-#     listen              443 ssl;
-#     server_name         www.example.com;
-#     ssl_certificate     www.example.com.crt;
-#     ssl_certificate_key www.example.com.key;
-#     ssl_protocols       TLSv1.2 TLSv1.3;
-#     ssl_ciphers         HIGH:!aNULL:!MD5;
+server {
+    listen                  80;
+    listen                 443 ssl;
+    index                   index.html;
+    server_name:            ael-asri.42.fr;
+    root                    /var/www/html;
+
+    # ssl_certificate         ael-asri.42.fr.crt;
+    # ssl_certificate_key     ael-asri.42.fr.key;
+    # ssl_protocols           TLSv1.2 TLSv1.3;
+}
+
+# # this location here will match all the requests
+# location / {
 #     ...
 # }
-
-# http
-# {
-#     server
-#     {
-#         listen 443;
-#         root /data/upl;
-    
-#         location
-#         {
-#             root /data/www;
-#         }
-#     }
-# }
-
-server {
-    listen:                 443 ssl;
-    server_name:            www.example.com;
-    ssl_certificate         www.example.com.crt;
-    ssl_certificate_key     www.example.com.key;
-    ssl_protocols           TLSv1.2 TLSv1.3;
-}
