--- a/srcs/requirements/nginx/Dockerfile
+++ b/srcs/requirements/nginx/Dockerfile
@@ -1,7 +1,9 @@
 # defining the base image
-FROM nginx:alpine
+FROM nginx
+
+RUN apt-get update
 
 # copying the content of the current directory to the path (location into nginx container)
-COPY . /usr/share/nginx/html
+COPY index.html /usr/share/nginx/html
 
 
