--- a/srcs/requirements/nginx/conf/nginx.conf
+++ b/srcs/requirements/nginx/conf/nginx.conf
@@ -1,16 +1,82 @@
-server {
-    listen                  80;
-    listen                 443 ssl;
-    index                   index.html;
-    server_name:            ael-asri.42.fr;
-    root                    /var/www/html;
+# server {
+#     listen 80 ;
+#     # listen [::]:80 default_server;
 
-    # ssl_certificate         ael-asri.42.fr.crt;
-    # ssl_certificate_key     ael-asri.42.fr.key;
-    # ssl_protocols           TLSv1.2 TLSv1.3;
-}
+#     index index.php;
 
-# # this location here will match all the requests
-# location / {
-#     ...
+#     server_name ael-asri.42.fr;
+
+#     root /var/www/html;
+
+#     location / {
+#         try_files $uri $uri/ /index.php?$args
+#     }
+
+#     location ~ /.php {
+#         fastcgi_pass php:9000;
+#         fastcgi_param SCRIPT_FILENAME $document_root$fastcgi_script_name;
+#         include fastcgi_params;
+#     }
+
+#     # return 301 https://$server_name$request_uri;
+#     # return 301 https://$host$request_uri;
+#     # root /var/www/html;
+#     # index index.html;
+#     # proxy_pass http://pwm-node:3000;
 # }
+
+# server {
+#     listen 443 ssl;
+#     listen [::]:443 ssl;
+
+#     server_name ael-asri;
+
+#     ssl_certificate etc/nginx/ssl/ael-asri.crt;
+#     ssl_certificate_key etc/nginx/ssl/ael-asri.key;
+# }
+
+# server {
+#     listen 443 ssl;
+#     server_name ${DOMAIN_NAME};
+
+#     ssl_certificate     /etc/nginx/ssl/${DOMAIN_NAME}.crt;
+#     ssl_certificate_key /etc/nginx/ssl/${DOMAIN_NAME}.key;
+#     ssl_protocols       TLSv1.2 TLSv1.3;
+#     ssl_ciphers         HIGH: !aNULL: !MD5
+
+
+#     # location / {
+#     #     proxy_buffering     off;
+#     #     proxy_set_header    Host $host;
+#     #     proxy_set_header    X-Forwarded-Host $host;
+#     #     proxy_set_header    X-Forwarded-Proto $scheme;
+#     #     proxy_set_header    X-Forwarded-Port $server_port;
+#     #     proxy_pass          http://wordpress;
+#     # }
+# }
+
+# server {
+#     listen                  80;
+#     listen                 443 ssl;
+#     index                   index.html;
+#     server_name:            ael-asri.42.fr;
+#     root                    /var/www/html;
+
+#     # ssl_certificate         ael-asri.42.fr.crt;
+#     # ssl_certificate_key     ael-asri.42.fr.key;
+#     # ssl_protocols           TLSv1.2 TLSv1.3;
+# }
+
+# # # this location here will match all the requests
+# location / {
+#     index.html
+# }
+
+server {
+    listen       80;
+    server_name  ael-asri.42.fr;
+
+    location / {
+      proxy_pass      http://127.0.0.1:8080;
+    }
+  }
