--- a/srcs/docker-compose.yml
+++ b/srcs/docker-compose.yml
@@ -1,11 +1,16 @@
-version: '3'
+version: "3.8"
 
 services:
-  webserver:
-    image: nginx:latest
+  nginx:
+    # build: "./requirements/nginx"
+
+    image: nginx:alpine
     ports:
       - 80:80
       - 443:443
-    restart: always
-    volumes:
-      - ./nginx/conf/:/etc/nginx/conf.d/:ro
+    # volumes:
+    #   - "./nginx/:/etc/nginx/templates"
+    #   - ./certs:/etc/certs
+    # restart: always
+  mariadb:
+  wordpress:
