--- a/srcs/docker-compose.yml
+++ b/srcs/docker-compose.yml
@@ -9,6 +9,13 @@ services:
       - /home/login/data:/src/usr/share/nginx/html
       - /etc/nginx/ssl:/etc/nginx/ssl
     restart: always
-  mariadb:
+  db:
     image: mdb
+    environment:
+      MYSQL_USER: user
+      MYSQL_ROOT_PASSWORD: rootpass
+      MYSQL_PASSWORD: pass
+    ports:
+      - 3306:3306
     restart: always
+  
