--- a/srcs/requirements/mariadb/Dockerfile
+++ b/srcs/requirements/mariadb/Dockerfile
@@ -1,5 +1,5 @@
 FROM debian:buster
 
-RUN apt update -y && apt install mariadb-server -y
+RUN apt-get update -y && apt-get install mariadb-server -y
 
-CMD ["mysqld"]
+CMD ["mysqld_safe"]
