--- a/srcs/requirements/wordpress/dockerfile
+++ b/srcs/requirements/wordpress/dockerfile
@@ -1,15 +1,20 @@
 FROM debian:buster
 
 RUN apt-get -y update && apt-get -y upgrade &&\
-	apt-get -y install nginx &&\
-	apt-get install php-fpm -y
+	apt-get -y install curl &&\
+	apt-get -y install php php7.3-mysql
 
-COPY default /etc/nginx/sites-available
+# COPY default /etc/nginx/sites-available
 
-COPY index.html /var/www/html/
-
-COPY info.php /var/www/html/
+# COPY info.php /var/www/html/
 
 COPY www.conf /etc/php/7.3/fpm/pool.d
 
-CMD ["/usr/sbin/nginx", "-g", "daemon off;"]
+# COPY wp-config.php /
+COPY ./script.sh /
+
+RUN chmod 777 script.sh
+
+ENTRYPOINT [ "./script.sh" ]
+
+CMD [ "bash" ]
