--- a/srcs/docker-compose.yml
+++ b/srcs/docker-compose.yml
@@ -11,24 +11,29 @@ services:
     restart: always
   db:
     image: mymdb
+    ports:
+      - 3306:3306
+    volumes:
+      - db_data:/var/lib/mysql
+    restart: always
     environment:
       MYSQL_ROOT_PASSWORD: pass1234
       MYSQL_DATABASE: wordpress
       MYSQL_USER: wordpress
       MYSQL_PASSWORD: wordpress
-    ports:
-      - 3306:3306
-    restart: always
   wp:
     depends_on:
-      - mymdb
+      - db
     image: mywp
     ports:
       - 8000:80
+    volumes:
+      - wp_data:/var/www/html
     restart: always
     environment:
-      WORDPRESS_DB_HOST: mymd:3306
+      WORDPRESS_DB_HOST: db:3306
       WORDPRESS_DB_USER: wordpress
       WORDPRESS_DB_PASSWORD: wordpress
-
-  
+volumes:
+  db_data: {}
+  wp_data: {}
