--- a/srcs/requirements/mariadb/Dockerfile
+++ b/srcs/requirements/mariadb/Dockerfile
@@ -1,5 +1,18 @@
 FROM debian:buster
 
-RUN apt-get update -y && apt-get install mariadb-server -y
+RUN apt-get -y update && apt-get -y upgrade &&\
+	apt-get -y install default-mysql-server &&\
+	apt-get -y install mariadb-server mariadb-client
 
-CMD ["mysqld_safe"]
+
+COPY script.sh /
+
+COPY initdb.sql /
+
+RUN chmod 777 script.sh
+
+# RUN sh script.sh
+
+ENTRYPOINT [ "./script.sh" ]
+
+CMD [ "bash", "mysqld_safe" ]
