nginx wordpress~ mariadb

--- a/srcs/.env
+++ b/srcs/.env
@@ -1,1 +1,10 @@
-WORDPRESS_USER
+WP_ADMIN_USER=stronk
+WP_ADMIN_PASS=pass
+WP_ADMIN_EMAIL=stronk@me.com
+WP_DB_HOST=mariadb
+
+
+MYSQL_DATABASE=wordpress
+MYSQL_USER=stronk
+MYSQL_ROOT_PASSWORD=pass
+MYSQL_PASSWORD=pass
