--- a/srcs/docker-compose.yml
+++ b/srcs/docker-compose.yml
@@ -1,39 +1,68 @@
-version: "3"
-
+version: '3.5'
 services:
   nginx:
-    image: mynginx
+    depends_on:
+      - wordpress
+    build:
+      context: ./requirements/nginx
+      dockerfile: Dockerfile
     ports:
       - "443:443"
-    volumes:
-      # - /home/login/data:/src/usr/share/nginx/html
-      - /etc/nginx/ssl:/etc/nginx/ssl
-    restart: always
-  db:
-    image: mymdb
-    ports:
-      - 3306:3306
-    volumes:
-      - db_data:/var/lib/mysql
-    restart: always
-    environment:
-      MYSQL_ROOT_PASSWORD: pass1234
-      MYSQL_DATABASE: wordpress
-      MYSQL_USER: wordpress
-      MYSQL_PASSWORD: wordpress
-  wp:
-    depends_on:
-      - db
-    image: mywp
-    ports:
-      - 8000:80
+    env_file:
+      - ./.env
     volumes:
       - wp_data:/var/www/html
+    container_name: nginx
+    networks:
+      - inception
     restart: always
-    environment:
-      WORDPRESS_DB_HOST: db:3306
-      WORDPRESS_DB_USER: wordpress
-      WORDPRESS_DB_PASSWORD: wordpress
+  mariadb:
+    build: 
+      context: ./requirements/mariadb
+      dockerfile: Dockerfile
+    expose:
+      - 3306
+    env_file:
+      - ./.env
+    volumes:
+      - db_data:/var/lib/mysql
+    container_name: mariadb
+    networks:
+      - inception
+    restart: always
+  wordpress:
+    depends_on:
+      - mariadb
+    build:
+      context: ./requirements/wordpress
+      dockerfile: Dockerfile
+    expose:
+      - 9000
+    env_file:
+      - ./.env
+    volumes:
+      - wp_data:/var/www/html
+    container_name: wordpress
+    networks:
+      - inception
+    restart: always
+
 volumes:
-  db_data: {}
-  wp_data: {}
+  db_data:
+    name: db_data
+    driver: local
+    driver_opts:
+      o: bind
+      type: none
+      device: "/home/$USER/data/db_data"
+  wp_data:
+    name: wp_data
+    driver: local
+    driver_opts:
+      o: bind 
+      type: none
+      device: "/home/$USER/data/wp_data"
+
+networks:
+  inception:
+    driver: bridge
