--- a/srcs/requirements/wordpress/dockerfile
+++ b/srcs/requirements/wordpress/dockerfile
@@ -1,20 +1,22 @@
 FROM debian:buster
 
 RUN apt-get -y update && apt-get -y upgrade &&\
-	apt-get -y install curl &&\
-	apt-get -y install php php7.3-mysql
+	apt-get -y install curl wget &&\
+	apt-get -y install php php-fpm php-mysqli
 
+RUN wget https://wordpress.org/latest.tar.gz
+RUN tar -xzvf latest.tar.gz
+RUN mkdir -p /var/www/html
+RUN mv wordpress /var/www/html
 
-COPY info.php /var/www/html/
+COPY conf/wp-config-sample.php /var/www/html/wordpress/wp-config.php
+COPY conf/www.conf /etc/php/7.3/fpm/pool.d/www.conf
 
-COPY conf/www.conf /etc/php/7.3/fpm/pool.d
+#- why this \/\/\/
+RUN mkdir -p /run/php
+#- why this \/\//\
+COPY script.sh /
+RUN chmod +x /script.sh
 
-# COPY wp-config.php /
-
-COPY ./script.sh /
-
-RUN chmod 777 script.sh
-
-ENTRYPOINT [ "./script.sh" ]
-
-CMD [ "bash" ]
+RUN service php7.3-fpm restart
+CMD ./script.sh && php-fpm7.3 -F
