--- a/srcs/requirements/mariadb/Dockerfile
+++ b/srcs/requirements/mariadb/Dockerfile
@@ -3,13 +3,13 @@ FROM debian:buster
 RUN apt-get -y update && apt-get -y upgrade &&\
 	apt-get -y install default-mysql-server
 
-COPY initdb.sql /
+COPY tools/initdb.sql /
 
-COPY 50-server.cnf /etc/mysql/mariadb.conf.d/
+COPY tools/50-server.cnf /etc/mysql/mariadb.conf.d/
 
-COPY script.sh /
+# COPY script.sh /
 
-RUN chmod 777 script.sh
+# RUN chmod 777 script.sh
 
 RUN service mysql start && mysql < initdb.sql
 
