--- a/srcs/requirements/wordpress/dockerfile
+++ b/srcs/requirements/wordpress/dockerfile
@@ -9,7 +9,7 @@ RUN tar -xzvf latest.tar.gz
 RUN mkdir -p /var/www/html
 RUN mv wordpress /var/www/html
 
-COPY conf/wp-config-sample.php /var/www/html/wordpress/wp-config.php
+COPY conf/wp-config-sample.php /var/www/html/wp-config.php
 COPY conf/www.conf /etc/php/7.3/fpm/pool.d/www.conf
 
 #- why this \/\/\/
